2008-07-08  Michael Smith <msmith@songbirdnest.com>

	Based on patch by: Alessandro Decina <alessandro@nnva.org>
	* sys/dshowdecwrapper/gstdshowaudiodec.c:
	* sys/dshowdecwrapper/gstdshowdecwrapper.h:
	* sys/dshowdecwrapper/gstdshowvideodec.c:
	  Add AAC, AC3 to handled codecs.
	  Fix handling of flush events.
	  Improve debug/error output.
	  Fix a number of typos in comments and variable names.

2008-07-08  Thijs Vermeir  <thijsvermeir@gmail.com>

	patch by: Ilja Pavkovic <illsen@gumblfarz.de>

	* gst/librfb/rfbdecoder.c:
	Implement ServerCutText message

2008-07-08  Thijs Vermeir  <thijsvermeir@gmail.com>

	patch by: Ilja Pavkovic <illsen@gumblfarz.de>

	* gst/librfb/gstrfbsrc.c:
	* gst/librfb/rfbdecoder.c:
	Add property for shared desktop

2008-07-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	Don't include ERROR_CFLAGS in GST_CXXFLAGS as it might include
	flags that are invalid for C++.

2008-07-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/spc/gstspc.c: (spc_setup):
	* gst/deinterlace2/tvtime/tomsmocomp/SearchLoopTop.inc:
	Don't use declarations after statements in the remaining code.

2008-07-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by:
	  Jonathan Rosser <jonathan dot rosser at rd dot bbc dot co dot uk>

	* ext/metadata/metadataexif.c: (metadataparse_handle_unit_tags):
	* ext/metadata/metadataxmp.c:
	(metadataparse_xmp_iter_add_to_tag_list):
	* ext/mythtv/gstmythtvsrc.c: (gst_mythtv_src_start):
	* ext/timidity/gstwildmidi.c: (gst_wildmidi_loop):
	Don't use declarations after statements.

2008-07-07  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Alessandro Decina

	* gst/mpegtsparse/mpegtsparse.c:
	Fix memory leak by unreffing structures when not needed.
	Fixes #539292.

2008-07-07  Stefan Kost  <ensonic@users.sf.net>

	* gst/sdp/gstsdpdemux.c:
	  Use floating point math for latencies < 0 sec in log output.

2008-07-06  Sebastian Dröge  <sebastian.droege@collabora.co.uk>
